Revision history for Dist-Zilla-Plugin-Git-RequireUnixEOL

{{$NEXT}}

  - Added xt/author/perltidy.t test based on Test::PerlTidy
  - Remove non-existing default directories from no_index in META.* files
  - Removed develop dependencies from META.json file
  - Removed x_authority from META.* files
  - Removed x_Dist_Zilla from META.* files
  - Removed x_BuiltWith from META.* files
  - Removed cpanfile from distribution
  - Replaced plugin bundle Author::SKIRMESS with an inline bundle through a Git submodule on https://github.com/skirmess/dzil-inc

0.002  2017-10-21 05:45:10 UTC

  - Added ignore option to ignore files

0.001  2017-10-16 21:45:09 UTC

  - Initial release