@@ -9,6 +9,7 @@ install:
   - if not exist "C:\strawberry" cinst strawberryperl
   - set PATH=C:\strawberry\perl\bin;C:\strawberry\perl\site\bin;C:\strawberry\c\bin;%PATH%
   - cd %APPVEYOR_BUILD_FOLDER%
+  - mkdir C:\tmp
   - cpanm --quiet --installdeps --notest --skip-satisfied --with-develop .
 
 build_script:
