@@ -33,7 +33,7 @@ requires:
   Carp: '0'
   Dist::Zilla::Role::BeforeBuild: '0'
   Git::Wrapper: '0'
-  Moose: '0'
+  Moose: '2.1203'
   Path::Tiny: '0'
   Safe::Isa: '0'
   Try::Tiny: '0'
