@@ -20,7 +20,7 @@ my %WriteMakefileArgs = (
     "Carp" => 0,
     "Dist::Zilla::Role::BeforeBuild" => 0,
     "Git::Wrapper" => 0,
-    "Moose" => 0,
+    "Moose" => "2.1203",
     "Path::Tiny" => 0,
     "Safe::Isa" => 0,
     "Try::Tiny" => 0,
@@ -49,7 +49,7 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::Git::GatherDir" => 0,
   "Dist::Zilla::Role::BeforeBuild" => 0,
   "Git::Wrapper" => 0,
-  "Moose" => 0,
+  "Moose" => "2.1203",
   "Path::Tiny" => 0,
   "Safe::Isa" => 0,
   "Test::DZil" => 0,
